--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.umd.js"></script>
 
 
-    <script>
+   <script>
         $(function () {
             var loadingScreen = $('.loading');
             var firstSection = $('#section0');
@@ -240,7 +240,7 @@
                         </div><!-- .list end -->
 
                         <div class="btn_wrap">
-                            <a href="img/29cm_포트폴리오.pdf" target="_blank">PROCESS</a>
+                            <a href="img/29cm_프로세스.pdf" target="_blank">PROCESS</a>
                             <a href="https://juna-ya.github.io/29cm/" target="_blank">WEBSITE</a>
                         </div><!-- .btn_Wrap end -->
 
@@ -254,7 +254,7 @@
                         </div><!-- .image_box -->
                         <div class="mockup_mobile">
                             <div class="image_mobile">
-                                <img src="img/조셉앤스테이시 _mobile.jpg" alt="조셉앤스테이시 모바일">
+                                <img src="img/조셉앤스테이시_mobile.jpg" alt="조셉앤스테이시 모바일">
                             </div>
                         </div>
                     </div><!-- .mockup end -->
@@ -277,7 +277,7 @@
                         </div><!-- .list end -->
 
                         <div class="btn_wrap">
-                            <a href="img/조셉앤스테이시_포트폴리오.pdf" target="_blank">PROCESS</a>
+                            <a href="img/조셉앤스테이시_프로세스.pdf" target="_blank">PROCESS</a>
                             <a href="https://juna-ya.github.io/josephandstacey/" target="_blank">WEBSITE</a>
                         </div><!-- .btn_Wrap end -->
                     </div><!-- .text_wrap -->
@@ -310,7 +310,7 @@
                         </div><!-- .list end -->
 
                         <div class="btn_wrap">
-                            <a href="img/BBIA_포트폴리오.pdf" target="_blank">PROCESS</a>
+                            <a href="img/BBIA_프로세스.pdf" target="_blank">PROCESS</a>
                             <a href="https://juna-ya.github.io/BBIA/" target="_blank">WEBSITE</a>
                         </div><!-- .btn_Wrap end -->
                     </div><!-- .text_wrap -->
@@ -337,8 +337,9 @@
                         </div><!-- .list end -->
 
                         <div class="btn_wrap">
-                            <a href="img/펫피_포트폴리오.pdf" target="_blank">PROCESS</a>
+                            <a href="img/펫피_프로세스.pdf" target="_blank">PROCESS</a>
                             <a href="" target="_blank">FIGMA</a>
+                            <a href="https://juna-ya.github.io/BBIA/" target="_blank">WEBSITE</a>
                         </div><!-- .btn_Wrap end -->
                     </div><!-- .text_wrap -->
                     <div class="mockup">
@@ -435,9 +436,12 @@
                 <div class="info">
                     <div class="left">
                         <div class="item">
-                            <p><a href="tel:+01063903656"><img src="img/phone.png"alt="">010.6390.3656</a></p>                        </div>
+                            <p><a href="tel:+01063903656"><img src="img/phone.png" alt="">010.6390.3656</a></p>
+                        </div>
                         <div class="item">
-                            <p><a href="mailto:jjjjjuna@naver.com"><img src="img/email.png"alt="">jjjjjuna@naver.com</a></p>                        </div>
+                            <p><a href="mailto:jjjjjuna@naver.com"><img src="img/email.png"
+                                        alt="">jjjjjuna@naver.com</a></p>
+                        </div>
                     </div><!-- .left -->
                     <div class="right">
                         <div class="item">
