--- a/index.html
+++ b/index.html
@@ -338,7 +338,9 @@
 
                         <div class="btn_wrap">
                             <a href="img/펫피_프로세스.pdf" target="_blank">PROCESS</a>
-                            <a href="" target="_blank">FIGMA</a>
+                            <a href="https://www.figma.com/design/4g3p09RiNpelYJhMIxufw3/%ED%8E%AB%ED%94%BC_%EB%A6%AC%EB%89%B4%EC%96%BC?node-id=0-1&p=f&t=RymMQAIVxvqrxR0s-0" target="_blank">FIGMA</a>
+                            <a href="https://www.figma.com/proto/4g3p09RiNpelYJhMIxufw3/%ED%8E%AB%ED%94%BC_%EB%A6%AC%EB%89%B4%EC%96%BC?node-id=1-66&p=f&t=M4yE1ejhz0Pqr7VV-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A66" target="_blank">WEBSITE</a>
+
                             <a href="https://juna-ya.github.io/BBIA/" target="_blank">WEBSITE</a>
                         </div><!-- .btn_Wrap end -->
                     </div><!-- .text_wrap -->
@@ -445,10 +447,11 @@
                     </div><!-- .left -->
                     <div class="right">
                         <div class="item">
-                            <p><img src="img/portfolio_icon.svg" alt="">PORTFOLIO</p>
+                           <p><a href="img/포트폴리오.pdf" target="_blank"><img src="img/portfolio_icon.svg" alt="">PORTFOLIO</a></p>
                         </div>
                         <div class="item">
-                            <p><img src="img/github_icon.svg" alt="">GITHUB</p>
+                            <p><a href="https://github.com/juna-ya?tab=repositories" target="_blank"><img src="img/github_icon.svg" alt="">GITHUB</a></p>
+                        </div>
                         </div>
                     </div><!-- .right -->
                 </div>
